--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
     display: flex;
     background-color: rgb(210, 205, 205);
     flex-wrap: wrap;
+    position: relative;
 }
 
 .elements {
@@ -21,9 +22,55 @@ h1 {
     height: 200px;
     box-sizing: border-box;
     border: 3px solid black;
+    border-radius: 6px;
     justify-content: center;
     text-align: center;
     align-items: center;
-    font-size: 60px;
-    padding-top: 50px;
+    font-size: 150px;
+    color: gold;  
+}
+
+.modal {
+    width: 300px;
+    height: 300px;
+    border-radius: 10px;
+    z-index: 4;
+    background-color: bisque; 
+    margin: 0 auto;
+    padding-top: 25%; 
+    box-sizing: border-box;
+    color: chocolate; 
+}
+
+body.lock {
+    overflow-y: hidden;
+}
+
+.modalContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(41, 41, 41, 0.6);
+    align-items: center;
+    padding: 300px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.8s ease 0s;
+    justify-content: space-around;
+    z-index: 2;
+}
+
+.closeBtn {
+    width: 200px;
+    height: 50px;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+.closeBtn:hover {
+     border-color:  #FDDCC4;
+     cursor: pointer;
 }
