all methods in anothers folders

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
     z-index: 4;
     background-color: bisque; 
     margin: 0 auto;
-    padding-top: 25%; 
+    padding-top: 85px;
     box-sizing: border-box;
     color: chocolate; 
 }
